--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="michishiki alpha">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>michishiki beta</title>
     
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.css" />
