Implement google map api sample

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
 
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB84X5gJILga4EUYrWor2seSgHg5TQPLaY&sensor=true"></script>
+    <script type="text/javascript" src="js/map.js"></script>
+
   </head>
   <body>
 
@@ -21,8 +24,9 @@
       </div>
 
       <div data-role="content">
-	map
+	<div id="map_canvas"></div>
       </div>
+
     </div>
 
     <div data-role="page" id="post">
