--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="map sample">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Table</title>
+    <title>Map</title>
     
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.css" />
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
