--- a/map.html
+++ b/map.html
@@ -24,7 +24,7 @@
       </div>
 
       <div data-role="content">
-	<div id="map_canvas"></div>
+	<div id="map-canvas"></div>
       </div>
     </div>
 
