--- a/map.html
+++ b/map.html
@@ -18,7 +18,7 @@
 
     <div data-role="page" id="map">
       <div data-role="header" data-position="fixed">
-	<a href="#search" data-role="button" data-icon="search" data-transition="pop">Search</a>
+	<a href="./post_list.html" data-role="button" data-icon="search" data-transition="pop">Search</a>
 	<h1>Map</h1>
 	<a href="./post.html" data-role="button" data-icon="plus" data-transition="slide">Post</a>
       </div>
