Modify invalid tag

--- a/post.html
+++ b/post.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="michishiki post">
+    <meta charset="UTF-8" />
+    <meta name="description" content="michishiki post" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Post</title>
     
@@ -37,7 +37,7 @@
 	  <label>Longitude:</label>
 	  <input type="number" step="any" name="longitude" />
 	  
-	  <input type="submit" id="post_button" value="送信" data-theme="b" data-icon="arrow-r" data-inline="true">
+	  <input type="submit" id="post_button" value="送信" data-theme="b" data-icon="arrow-r" data-inline="true" />
 	</form>
       </div>
     </div>
