--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="map sample">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Map</title>
     
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.css" />
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.css">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
 
@@ -17,7 +17,7 @@
   </head>
   <body>
 
-    <!-- Main page -->
+    <!-- Main Map Page -->
     <div data-role="page" id="map">
       <div data-role="header" data-position="fixed">
 	<!-- <a href="" data-role="button" data-icon="search" data-transition="pop">Search</a> -->
@@ -31,7 +31,7 @@
     </div>
 
     
-    <!-- Post -->
+    <!-- Post Page -->
     <div data-role="page" id="select-location">
       <div data-role="header" data-position="fixed" data-add-back-btn="true">
 	<h1>Select location</h1>
