--- a/test.html
+++ b/test.html
@@ -8,31 +8,38 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <script src="./bower_components/platform/platform.js"></script>
-    <link rel="import" href="./bower_components/polymer/polymer.html">
+    <link rel="import" href="./bower_components/polymer/polymer.html">    
+    <link rel="import" href="./bower_components/core-toolbar/core-toolbar.html">
+    <link rel="import" href="./bower_components/core-header-panel/core-header-panel.html">
+    <link rel="import" href="./bower_components/core-icons/core-icons.html">
+    <link rel="import" href="./bower_components/paper-icon-button/paper-icon-button.html">
     <link rel="import" href="./bower_components/google-map/google-map.html">
+
+    <link rel="stylesheet" href="./css/style.css">
 
     <script src="./bower_components/jquery/dist/jquery.js"></script>
     <script src="./js/utils.js"></script>
-
-    <style>
-      google-map {
-      display: block;
-      height: 600px;
-      }
-    </style>
-
   </head>
+  <body fullbleed unresolved>
 
-  <body unresolved>
-    
+    <!-- <core-header-panel> -->
+    <!--   <core-toolbar id="mainheader"> -->
+    <!-- 	<paper-icon-button id="navicon" icon="arrow-back"></paper-icon-button> -->
+    <!-- 	<span flex>Map</span> -->
+    <!-- 	<paper-icon-button id="searchbutton" icon="search"></paper-icon-button> -->
+    <!--   </core-toolbar> -->
+    <!--   <p>Sample content.</p> -->
+    <!--   <p>Sample content.</p> -->
+    <!-- </core-header-panel> -->
+
     <google-map latitude="37.77493 "longitude="-122.41942"></google-map>
     <script>
       getCurrentLocation().done(function(position) {
-        var map = document.querySelector('google-map')
-        map.latitude  = position.latitude;
-        map.longitude = position.longitude;
+      var map = document.querySelector('google-map')
+      map.latitude  = position.latitude;
+      map.longitude = position.longitude;
       });
     </script>
-
+    
   </body>
 </html>
