--- a/test.html
+++ b/test.html
@@ -7,13 +7,12 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <script src="./bower_components/platform/platform.js"></script>
-    <link rel="import" href="./bower_components/polymer/polymer.html">    
-    <link rel="import" href="./bower_components/core-toolbar/core-toolbar.html">
-    <link rel="import" href="./bower_components/core-header-panel/core-header-panel.html">
-    <link rel="import" href="./bower_components/core-icons/core-icons.html">
-    <link rel="import" href="./bower_components/paper-icon-button/paper-icon-button.html">
-    <link rel="import" href="./bower_components/google-map/google-map.html">
+    <script src="bower_components/platform/platform.js"></script>
+    <link rel="import" href="bower_components/polymer/polymer.html">
+    <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
+    <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
+    <link rel="import" href="bower_components/core-icons/core-icons.html">
+    <link rel="import" href="bower_components/google-map/google-map.html">
 
     <link rel="stylesheet" href="./css/style.css">
 
@@ -21,6 +20,37 @@
     <script src="./js/utils.js"></script>
   </head>
   <body fullbleed unresolved>
+
+    <core-toolbar>
+      <paper-icon-button
+	 id="menu-button"
+	 icon="menu">
+      </paper-icon-button>
+      Test
+    </core-toolbar>
+
+    <core-drawer-panel id="drawer-panel">
+      <div drawer> Drawer panel... </div>
+
+      <google-map main latitude="37.77493 "longitude="-122.41942"></google-map>
+      <script>
+	getCurrentLocation().done(function(position) {
+	var map = document.querySelector('google-map')
+	map.latitude  = position.latitude;
+	map.longitude = position.longitude;
+	});
+      </script>
+    </core-drawer-panel>
+    <script>
+      document.addEventListener('polymer-ready', function() {
+      var navicon = document.getElementById('menu-button');
+      var drawerPanel = document.getElementById('drawer-panel');
+      navicon.addEventListener('click', function() {
+      drawerPanel.togglePanel();
+      });
+      });
+    </script>
+
 
     <!-- <core-header-panel> -->
     <!--   <core-toolbar id="mainheader"> -->
@@ -31,15 +61,6 @@
     <!--   <p>Sample content.</p> -->
     <!--   <p>Sample content.</p> -->
     <!-- </core-header-panel> -->
-
-    <google-map latitude="37.77493 "longitude="-122.41942"></google-map>
-    <script>
-      getCurrentLocation().done(function(position) {
-      var map = document.querySelector('google-map')
-      map.latitude  = position.latitude;
-      map.longitude = position.longitude;
-      });
-    </script>
     
   </body>
 </html>
