--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja" ng-app="myApp">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
@@ -20,49 +21,43 @@
       ons.ready(function() {
       });
     </script>
+
+    <script src="lib/jquery/jquery.min.js"></script>
+
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB84X5gJILga4EUYrWor2seSgHg5TQPLaY&sensor=true"></script>
+    <script type="text/javascript" src="js/map.js"></script>
+
   </head>
 
-  <body>
+  <body onload="initMap">
 
-    <ons-navigator>
-      <ons-page style="background-color: #f9f9f9">
+    <ons-sliding-menu
+       above-page="map.html"
+       behind-page="menu.html"
+       slide="left"
+       var="menu">
+    </ons-sliding-menu>
+
+    <script type="text/ons-template" id="map.html">
+      <ons-page var="main_map">
 	<ons-toolbar>
-          <div class="center">Master Detail</div>
+	  <div class="left">
+	    <ons-toolbar-button ng-click="menu.toggleMenu()">
+	      <ons-icon icon="bars"></ons-icon>
+	    </ons-toolbar-button>
+	  </div>
+	  <div class="center">test</div>
 	</ons-toolbar>
-
-	<ons-list ng-controller="MasterController">
-          <ons-list-item modifier="chevron" ng-repeat="item in items" ng-click="showDetail($index)">
-            <ons-row>
-              <ons-col width="38px">
-		<ons-icon icon="{{item.icon}}" fixed-width="true" style="color: #999"></ons-icon>
-              </ons-col>
-              <ons-col class="left">
-		{{item.title}}
-              </ons-col>
-            </ons-row>
-          </ons-list-item>
-	</ons-list>
+	<div id="map-canvas"></div>
       </ons-page>
-    </ons-navigator>
+    </script>
 
-    <script type="text/ons-template" id="detail.html">
-      <ons-page ng-controller="DetailController" style="background-color: #f9f9f9;">
-	<ons-toolbar>
-          <div class="left"><ons-back-button>Back</ons-back-button></div>
-          <div class="center">Details</div>
-	</ons-toolbar>
-
-	<br>
-	<ons-list>
-          <ons-list-header>Item Information</ons-list-header>
-          <ons-list-item><strong>{{item.title}}</strong></ons-list-item>
-          <ons-list-item>
-            <ons-row>
-              <ons-col width="38px"><ons-icon icon="{{item.icon}}" fixed-width="true" style="color: #999"></ons-icon></ons-col>
-              <ons-col>{{item.description}}</ons-col>
-            </ons-row>
-	</ons-list>
-      </ons-page>
+    <script type="text/ons-template" id="menu.html">
+      <ons-list>
+	<ons-list-item modifier="chevron">test1</ons-list-item>
+	<ons-list-item modifier="chevron">test2</ons-list-item>
+	<ons-list-item modifier="chevron">test3</ons-list-item>
+      </ons-list>
     </script>
   </body>
 </html>
