--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </div>
     </div>
 
-    
-    <!-- Post Page -->
+
+    <!-- Place Selection Page -->
     <div data-role="page" id="select-location">
       <div data-role="header" data-position="fixed" data-add-back-btn="true">
 	<h1>Select location</h1>
@@ -40,6 +40,8 @@
       </div>
     </div>
 
+
+    <!-- Post Page -->
     <div data-role="page" id="post">
       <div data-role="header" data-position="fixed" data-add-back-btn="true">
 	<h1>Post</h1>
