--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div data-role="header" data-position="fixed">
 	<a href="#post-list" data-role="button" data-icon="search" data-transition="pop">List</a>
 	<h1>Map</h1>
-	<a href="#select-location" data-role="button" class="ui-btn-right" data-icon="plus" data-transition="pop" >Post</a>
+	<a href="#select-place" data-role="button" class="ui-btn-right" data-icon="plus" data-transition="pop" >Post</a>
       </div>
 
       <div data-role="content">
@@ -35,9 +35,9 @@
 
 
     <!-- Place Selection Page -->
-    <div data-role="page" id="select-location">
+    <div data-role="page" id="select-place">
       <div data-role="header" data-position="fixed" data-add-back-btn="true">
-	<h1>Select location</h1>
+	<h1>Select Place</h1>
 	<a href="#post" data-role="button" class="ui-btn-right" data-icon="arrow-r" data-transition="slide">Next</a>
       </div>
     </div>
