Add select place map

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 	<h1>Select Place</h1>
 	<a href="#post" data-role="button" class="ui-btn-right" data-icon="arrow-r" data-transition="slide">Next</a>
       </div>
+
+      <div data-role="content">
+	<div id="select-place-map-canvas"></div>
+      </div>
     </div>
 
 
