--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div data-role="page" id="post-list">
       <div data-role="header" data-position="fixed" data-add-back-btn="true">
 	<h1>Post List</h1>
-	<a href="#query-select" data-role="button" class="ui-btn-right" data-icon="arrow-r" data-transition="slide">Next</a>
+	<a href="#query-setting" data-role="button" class="ui-btn-right" data-icon="arrow-r" data-transition="slide">Next</a>
       </div>
 
       <div data-role="content">
