--- a/index.html
+++ b/index.html
@@ -104,17 +104,17 @@
 	  <label>Order by:</label>
 	  <select name="order-by" id="order-by">
 	    <option value="posted_by">投稿者</option>
-	    <option value="updated_at">投稿日時</option>
+	    <option value="updated_at" selected>投稿日時</option>
 	  </select>
 
 	  <label>Order:</label>
 	  <select name="order" id="order" data-role="slider">
 	    <option value="ascend">昇順</option>
-	    <option value="descend">降順</option>
+	    <option value="descend" selected>降順</option>
 	  </select>
 
 	  <label>Limit:</label>
-	  <input type="number" min="0" max="1000" value="100" name="limit" id="limit"/>
+	  <input type="number" min="0" max="1000" value="10" name="limit" id="limit"/>
 	</form>
       </div>
     </div>
