Set default localite value

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	  <input type="text" name="comment" />
 
 	  <label>地元度:</label>
-	  <input type="range" min="0" max="100" step="1" name="localite" />
+	  <input type="range" min="0" max="100" step="1" value="50" name="localite" />
 
 	  <label>Latitude:</label>
 	  <input type="number" id="post-lat" step="any" name="latitude" />
