--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div data-role="content">
-	<form method="post" action="http://amateras.wsd.kutc.kansai-u.ac.jp/~otsuka/michishiki_api_server/post.py" id="post_form">
+	<form id="post_form">
 	  <label>名前:</label>
 	  <input type="text" name="posted_by" id="basic" />
 	  
