--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB84X5gJILga4EUYrWor2seSgHg5TQPLaY&sensor=true"></script>
     <script type="text/javascript" src="js/utils.js"></script>
+    <script type="text/javascript" src="js/queryOptionBuilder.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
     <script type="text/javascript" src="js/select_place.js"></script>
     <script type="text/javascript" src="js/post.js"></script>
