Remove optional html tag attribute

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
 
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB84X5gJILga4EUYrWor2seSgHg5TQPLaY&sensor=true"></script>
-    <script type="text/javascript" src="js/utils.js"></script>
-    <script type="text/javascript" src="js/queryOptionBuilder.js"></script>
-    <script type="text/javascript" src="js/map.js"></script>
-    <script type="text/javascript" src="js/select_place.js"></script>
-    <script type="text/javascript" src="js/post.js"></script>
-    <script type="text/javascript" src="js/post_list.js"></script>
-    <script type="text/javascript" src="js/query_select.js"></script>    
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB84X5gJILga4EUYrWor2seSgHg5TQPLaY&sensor=true"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/queryOptionBuilder.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/select_place.js"></script>
+    <script src="js/post.js"></script>
+    <script src="js/post_list.js"></script>
+    <script src="js/query_select.js"></script>
 
   </head>
   <body>
