--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
 
-    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB84X5gJILga4EUYrWor2seSgHg5TQPLaY&sensor=true"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=true"></script>
     <script src="js/utils.js"></script>
     <script src="js/queryOptionBuilder.js"></script>
     <script src="js/map.js"></script>
