--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="map sample">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Map</title>
+    <title></title>
 
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.css">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -14,109 +14,22 @@
     <script src="js/utils.js"></script>
     <script src="js/queryOptionBuilder.js"></script>
     <script src="js/map.js"></script>
-    <script src="js/select_place.js"></script>
-    <script src="js/post.js"></script>
-    <script src="js/post_list.js"></script>
-    <script src="js/query_select.js"></script>
+    <!-- <script src="js/select_place.js"></script> -->
+    <!-- <script src="js/post.js"></script> -->
+    <!-- <script src="js/post_list.js"></script> -->
+    <!-- <script src="js/query_select.js"></script> -->
 
   </head>
   <body>
 
-    <!-- Main Map Page -->
-    <div data-role="page" id="map">
+    <!-- Main Map -->
+    <div data-role="page" id="main-map">
       <div data-role="header" data-position="fixed">
-	<a href="#post-list" data-role="button" data-icon="search" data-transition="pop">List</a>
 	<h1>Map</h1>
-	<a href="#select-place" data-role="button" id="post-next-button" class="ui-btn-right" data-icon="plus" data-transition="pop" >Post</a>
       </div>
 
       <div data-role="content">
 	<div id="map-canvas"></div>
-      </div>
-    </div>
-
-
-    <!-- Place Selection Page -->
-    <div data-role="page" id="select-place">
-      <div data-role="header" data-position="fixed" data-add-back-btn="true">
-	<h1>Select Place</h1>
-	<a href="#post" data-role="button" class="ui-btn-right" data-icon="arrow-r" data-transition="slide">Next</a>
-      </div>
-
-      <div data-role="content">
-	<div id="select-place-map-canvas"></div>
-      </div>
-    </div>
-
-
-    <!-- Post Page -->
-    <div data-role="page" id="post">
-      <div data-role="header" data-position="fixed" data-add-back-btn="true">
-	<h1>Post</h1>
-      </div>
-
-      <div data-role="content">
-	<form id="post_form">
-	  <label>名前:</label>
-	  <input type="text" name="posted_by" id="basic" />
-	  
-	  <label>タイトル:</label>
-	  <input type="text" name="title" />
-	  
-	  <label>コメント:</label>
-	  <input type="text" name="comment" />
-
-	  <label>地元度:</label>
-	  <input type="range" min="0" max="100" step="1" value="50" name="localite" />
-
-	  <label>Latitude:</label>
-	  <input type="number" id="post-lat" step="any" name="latitude" />
-
-	  <label>Longitude:</label>
-	  <input type="number" id="post-lng" step="any" name="longitude" />
-	  
-	  <input type="submit" id="post_button" value="送信" data-theme="b" data-icon="arrow-r" data-inline="true" />
-	</form>
-      </div>
-    </div>
-
-
-    <!-- Post List Page-->
-    <div data-role="page" id="post-list">
-      <div data-role="header" data-position="fixed" data-add-back-btn="true">
-	<h1>Post List</h1>
-	<a href="#query-setting" data-role="button" class="ui-btn-right" data-icon="arrow-r" data-transition="slide">Next</a>
-      </div>
-
-      <div data-role="content">
-	<ul data-role="listview" id="post_list"></ul>
-      </div>
-    </div>
-
-
-    <!-- Query Setting Page -->
-    <div data-role="page" id="query-setting">
-      <div data-role="header" data-position="fixed" data-add-back-btn="true">
-	<h1>Query Setting</h1>
-      </div>
-
-      <div data-role="content">
-	<form>
-	  <label>Order by:</label>
-	  <select name="order-by" id="order-by">
-	    <option value="posted_by">投稿者</option>
-	    <option value="updated_at" selected>投稿日時</option>
-	  </select>
-
-	  <label>Order:</label>
-	  <select name="order" id="order" data-role="slider">
-	    <option value="ascend">昇順</option>
-	    <option value="descend" selected>降順</option>
-	  </select>
-
-	  <label>Limit:</label>
-	  <input type="number" min="0" max="1000" value="10" name="limit" id="limit"/>
-	</form>
       </div>
     </div>
 
