--- a/index.html
+++ b/index.html
@@ -22,14 +22,36 @@
   </head>
   <body>
 
-    <!-- Main Map -->
-    <div data-role="page" id="main-map">
+    <!-- 地元 Map -->
+    <div data-role="page" id="jimoto-map">
       <div data-role="header" data-position="fixed">
-	<h1>Map</h1>
+	<a href="#kankou-map"
+	   data-icon="arrow-l"
+	   data-transition="flip">観光 Map</a>
+	<h1>地元 Map</h1>
       </div>
 
       <div data-role="content">
 	<div id="map-canvas"></div>
+      </div>
+    </div>
+
+    <!-- 観光 Map -->
+    <div data-role="page" id="kankou-map">
+      <div data-role="header" data-position="fixed">
+	<a href="#jimoto-map"
+	   data-icon="arrow-l"
+	   data-transition="flip">地元 Map</a>
+	<h1>観光 Map</h1>
+      </div>
+
+      <div data-role="content"></div>
+    </div>
+
+    <!-- 投稿フォーム -->
+    <div data-role="page" id="post-form">
+      <div data-role="header" data-position="fixed">
+	<h1>Test</h1>
       </div>
     </div>
 
