--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
   </head>
   <body>
 
-    <!-- 地元 Map -->
+    <!-- 地元民 Map -->
     <div data-role="page" id="jimoto-map">
       <div data-role="header" data-position="fixed">
 	<a href="#kankou-map"
 	   data-icon="arrow-l"
-	   data-transition="flip">観光 Map</a>
-	<h1>地元 Map</h1>
+	   data-transition="flip">観光者の地図</a>
+	<h1>地元民の地図</h1>
+	<a href="#select-place"
+	   data-icon="plus"
+	   data-transition="slide">Post</a>
       </div>
 
       <div data-role="content">
@@ -36,22 +39,66 @@
       </div>
     </div>
 
-    <!-- 観光 Map -->
+    <!-- 観光者 Map -->
     <div data-role="page" id="kankou-map">
       <div data-role="header" data-position="fixed">
 	<a href="#jimoto-map"
 	   data-icon="arrow-l"
-	   data-transition="flip">地元 Map</a>
-	<h1>観光 Map</h1>
+	   data-transition="flip">地元民の地図</a>
+	<h1>観光者の地図</h1>
+	<a href="#select-place"
+	   data-icon="plus"
+	   data-transition="slide">Post</a>
       </div>
 
       <div data-role="content"></div>
     </div>
 
+    
+    <!-- 投稿場所指定-->
+    <div data-role="page" id="select-place">
+      <div data-role="header"
+	   data-position="fixed"
+	   data-add-back-btn="true">
+	<h1>Select Place</h1>
+	<a href="#post"
+	   data-icon="arrow-r"
+	   class="ui-btn-right">Next</a>
+      </div>
+
+      <div data-role="content">
+	<div id="select-place-map"></div>
+      </div>
+    </div>
+
     <!-- 投稿フォーム -->
-    <div data-role="page" id="post-form">
-      <div data-role="header" data-position="fixed">
-	<h1>Test</h1>
+    <div data-role="page" id="post">
+      <div data-role="header" data-position="fixed" data-add-back-btn="true">
+	<h1>Post</h1>
+      </div>
+
+      <div data-role="content">
+	<form id="post_form">
+	  <label>名前:</label>
+	  <input type="text" name="posted_by" id="basic" />
+
+	  <label>タイトル:</label>
+	  <input type="text" name="title" />
+
+	  <label>コメント:</label>
+	  <input type="text" name="comment" />
+
+	  <label>地元度:</label>
+	  <input type="range" min="0" max="100" step="1" value="50" name="localite" />
+
+	  <label>Latitude:</label>
+	  <input type="number" id="post-lat" step="any" name="latitude" />
+
+	  <label>Longitude:</label>
+	  <input type="number" id="post-lng" step="any" name="longitude" />
+
+	  <input type="submit" id="post_button" value="送信" data-theme="b" data-icon="arrow-r" data-inline="true" />
+	</form>
       </div>
     </div>
 
