Enable post page

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
     <script src="js/utils.js"></script>
     <script src="js/queryOptionBuilder.js"></script>
     <script src="js/map.js"></script>
-    <!-- <script src="js/select_place.js"></script> -->
-    <!-- <script src="js/post.js"></script> -->
-    <!-- <script src="js/post_list.js"></script> -->
-    <!-- <script src="js/query_select.js"></script> -->
+    <script src="js/select_place.js"></script>
+    <script src="js/post.js"></script>
     <script src="js/michishiki.js"></script>
 
   </head>
