--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Map</title>
 
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.css">
+    <link rel="stylesheet" href="mapview.css">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
 
