Move css file to css directory

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title></title>
 
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.css">
-    <link rel="stylesheet" href="mapview.css">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
 
@@ -19,6 +18,7 @@
     <script src="js/post.js"></script>
     <script src="js/michishiki.js"></script>
 
+    <link rel="stylesheet" href="css/mapview.css">
   </head>
   <body>
 
