--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="js/michishiki.js"></script>
     <script src="js/michishiki_api.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/post.js"></script>
 
     <link rel="stylesheet" href="css/mapview.css">
   </head>
