--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     
     
-    <!-- 投稿場所指定-->
+    <!-- 投稿場所の指定-->
     <div data-role="page" id="select-place">
       <div data-role="header"
 	   data-position="fixed"
@@ -59,6 +59,7 @@
 	<div id="select-place-map"></div>
       </div>
     </div>
+
 
     <!-- 投稿フォーム -->
     <div data-role="page" id="post">
