Hidden latitude and longitude forms, refs #15

--- a/index.html
+++ b/index.html
@@ -81,11 +81,8 @@
 	  <label>地元度:</label>
 	  <input type="range" min="0" max="100" step="1" value="50" name="localite" />
 
-	  <label>Latitude:</label>
-	  <input type="number" id="post-lat" step="any" name="latitude" />
-
-	  <label>Longitude:</label>
-	  <input type="number" id="post-lng" step="any" name="longitude" />
+	  <input type="hidden" id="post-lat" step="any" name="latitude" />
+	  <input type="hidden" id="post-lng" step="any" name="longitude" />
 
 	  <input type="submit" id="post_button" value="送信" data-theme="b" data-icon="arrow-r" data-inline="true" />
 	</form>
