--- a/index.html
+++ b/index.html
@@ -78,8 +78,15 @@
 	  <label>コメント:</label>
 	  <input type="text" name="comment" />
 
-	  <label>地元度:</label>
-	  <input type="range" min="0" max="100" step="1" value="50" name="localite" />
+	  <div data-role="fieldcontain">
+	    <fieldset data-role="controlgroup">
+              <legend>地元度:</legend>
+              <label for="localite-local">地元</label>
+              <input type="radio" name="localite" id="localite-local" value="100" checked />
+              <label for="localite-tourism">観光</label>
+              <input type="radio" name="localite" id="localite-tourism" value="0"/>
+	    </fieldset>
+	  </div>
 
 	  <input type="hidden" id="post-lat" step="any" name="latitude" />
 	  <input type="hidden" id="post-lng" step="any" name="longitude" />
