No selected localite

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	    <fieldset data-role="controlgroup">
               <legend>地元度:</legend>
               <label for="localite-local">地元</label>
-              <input type="radio" name="localite" id="localite-local" value="100" checked />
+              <input type="radio" name="localite" id="localite-local" value="100"/>
               <label for="localite-tourism">観光</label>
               <input type="radio" name="localite" id="localite-tourism" value="0"/>
 	    </fieldset>
