Disable user name and title as a trial

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 
       <div data-role="content">
 	<form id="post_form">
-	  <label>名前:</label>
-	  <input type="text" name="posted_by" id="basic" />
+	  <!-- <label>名前:</label> -->
+	  <input type="hidden" name="posted_by" id="basic" value="test" />
 
-	  <label>タイトル:</label>
-	  <input type="text" name="title" />
+	  <!-- <label>タイトル:</label> -->
+	  <input type="hidden" name="title" value="test" />
 
 	  <label>コメント:</label>
 	  <input type="text" name="comment" />
